<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical" 
    >

    <!-- <ListView -->
    <!-- android:id="@+id/lv_footer" -->
    <!-- android:layout_width="match_parent" -->
    <!-- android:layout_height="wrap_content" -->
    <!-- android:background="@color/white" -->
    <!-- android:cacheColorHint="#00000000" -->
    <!-- android:divider="@color/divider" -->
    <!-- android:dividerHeight="1px" -->
    <!-- android:fadingEdge="none" -->
    <!-- android:listSelector="#00000000" -->
    <!-- android:scrollbars="none" > -->
    <!-- </ListView> -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="64dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/iv_icon_add"
            android:layout_width="@dimen/results_indicators_icon_width"
            android:layout_height="@dimen/results_indicators_icon_height"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="13dp"
            android:contentDescription="@null"
            android:src="@drawable/icon_add_new" />

        <TextView
            android:id="@+id/tv_card_add"
            style="@style/text_card_type_footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/text_card_add_new" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/list_divider_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="64dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/iv_icon_group"
            android:layout_width="@dimen/results_indicators_icon_width"
            android:layout_height="@dimen/results_indicators_icon_height"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="13dp"
            android:contentDescription="@null"
            android:src="@drawable/icon_group" />

        <TextView
            android:id="@+id/tv_card_group"
            style="@style/text_card_type_footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/text_card_group" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/list_divider_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="64dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/iv_icon_public"
            android:layout_width="@dimen/results_indicators_icon_width"
            android:layout_height="@dimen/results_indicators_icon_height"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="13dp"
            android:contentDescription="@null"
            android:src="@drawable/icon_public_num" />

        <TextView
            android:id="@+id/tv_card_public"
            style="@style/text_card_type_footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/text_card_public" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/list_divider_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="64dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/iv_icon_cooperation"
            android:layout_width="@dimen/results_indicators_icon_width"
            android:layout_height="@dimen/results_indicators_icon_height"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="13dp"
            android:contentDescription="@null"
            android:src="@drawable/icon_cooperation" />

        <TextView
            android:id="@+id/tv_card_cooperation"
            style="@style/text_card_type_footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/text_card_coopration" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/list_divider_color" />

</LinearLayout>