<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_ececec"
    android:orientation="vertical" >

    <include
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="13dp"
        layout="@layout/common_search_bar" />

    <!-- <ListView -->
    <!-- android:id="@+id/lv" -->
    <!-- android:layout_width="match_parent" -->
    <!-- android:layout_height="wrap_content" -->
    <!-- android:background="@color/white" -->
    <!-- android:cacheColorHint="#00000000" -->
    <!-- android:divider="@color/divider" -->
    <!-- android:dividerHeight="1px" -->
    <!-- android:fadingEdge="none" -->
    <!-- android:listSelector="#00000000" -->
    <!-- android:scrollbars="none" > -->
    <!-- </ListView> -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
			<!-- one -->
            <View android:layout_height="0.6dp"
                android:layout_width="match_parent"
                android:background="@color/list_divider_color"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:background="@color/white"
                android:minHeight="74dp" >
                <ImageView
                    android:id="@+id/iv_icon"
                    android:layout_width="@dimen/results_indicators_icon_width"
                    android:layout_height="@dimen/results_indicators_icon_height"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="13dp"
                    android:layout_marginRight="13dp"
                    android:src="@drawable/icon_msg_two" />
                <ImageView
                    android:id="@+id/iv_copy"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="13dp"
                    android:layout_marginLeft="13dp"
                    android:src="@drawable/icon_copy" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/iv_copy"
                    android:layout_toRightOf="@id/iv_icon" 
                    android:orientation="vertical">
                    <TextView android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        style="@style/text_card_type_footer"
                        android:text="@string/text_angel"/>
                    <TextView android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:paddingTop="3dp"
                        android:textSize="14sp"
	                    android:textColor="@color/color_text_gray"
                        android:text="@string/text_success"/>
                    <TextView android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:textSize="12sp"
                        android:paddingTop="3dp"
	                    android:textColor="@color/color_rankings_describe"
                        android:text="@string/text_ten_minite"/>
                </LinearLayout>
            </RelativeLayout>
            <View android:layout_height="0.6dp"
                android:layout_width="match_parent"
                android:background="@color/list_divider_color"
                android:layout_marginBottom="15dp"/>
            
            <!-- two -->
            <View android:layout_height="0.6dp"
                android:layout_width="match_parent"
                android:background="@color/list_divider_color"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:background="@color/white"
                android:minHeight="94dp" >
                <ImageView
                    android:id="@+id/iv_icon"
                    android:layout_width="@dimen/results_indicators_icon_width"
                    android:layout_height="@dimen/results_indicators_icon_height"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="13dp"
                    android:layout_marginRight="13dp"
                    android:src="@drawable/icon_msg_six" />
                <ImageView
                    android:id="@+id/iv_copy"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="13dp"
                    android:layout_marginLeft="13dp"
                    android:src="@drawable/icon_copy" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/iv_copy"
                    android:layout_toRightOf="@id/iv_icon" 
                    android:orientation="vertical">
                    <LinearLayout android:layout_height="wrap_content"
                        android:layout_width="match_parent">
                       <TextView android:layout_height="wrap_content"
	                        android:layout_width="wrap_content"
	                        android:text="@string/text_bai"
	                        style="@style/text_card_type_footer"
                        />
                       <TextView android:layout_height="wrap_content"
	                        android:layout_width="wrap_content"
	                        android:text="@string/text_share"
	                        android:textSize="12sp"
	                        android:textColor="@color/color_rankings_describe"
	                        android:layout_marginLeft="13dp"
                        /> 
                    </LinearLayout>
                    <RelativeLayout android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:paddingTop="3dp">
                        <ImageView
		                    android:id="@+id/iv_icon"
		                    android:layout_width="25dp"
		                    android:layout_height="25dp"
		                    android:layout_alignParentLeft="true"
		                    android:layout_marginRight="13dp"
		                    android:src="@drawable/icon_msg_zero" />
                        <LinearLayout android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:layout_toRightOf="@id/iv_icon"
                            android:orientation="vertical">
                            
	                        <TextView android:layout_height="wrap_content"
	                            android:layout_width="wrap_content"
	                            android:textSize="14sp"
	                            android:textColor="@color/color_key_process"
	                            android:id="@+id/tv_sub"
	                            android:text="@string/text_subway"/>
	                        <TextView android:layout_height="wrap_content"
	                            android:layout_width="wrap_content"
	                            android:textSize="12sp"
	                            android:textColor="@color/color_rankings_describe"
	                            android:id="@+id/tv_sub"
	                            android:text="@string/text_buy"/>
                        </LinearLayout>
                    </RelativeLayout>
                    <TextView android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:paddingTop="3dp"
                        android:textSize="12sp"
	                    android:textColor="@color/color_rankings_describe"
                        android:text="@string/text_30_minite"/>
                </LinearLayout>
            </RelativeLayout>
            <View android:layout_height="0.6dp"
                android:layout_width="match_parent"
                android:background="@color/list_divider_color"
                android:layout_marginBottom="15dp"/>
            
            <!-- two -->
            <View android:layout_height="0.6dp"
                android:layout_width="match_parent"
                android:background="@color/list_divider_color"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:background="@color/white"
                android:minHeight="94dp" >
                <ImageView
                    android:id="@+id/iv_icon"
                    android:layout_width="@dimen/results_indicators_icon_width"
                    android:layout_height="@dimen/results_indicators_icon_height"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="13dp"
                    android:layout_marginRight="13dp"
                    android:src="@drawable/icon_msg_five" />
                <ImageView
                    android:id="@+id/iv_copy"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="13dp"
                    android:layout_marginLeft="13dp"
                    android:src="@drawable/icon_copy" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/iv_copy"
                    android:layout_toRightOf="@id/iv_icon" 
                    android:orientation="vertical">
                    <LinearLayout android:layout_height="wrap_content"
                        android:layout_width="match_parent">
                       <TextView android:layout_height="wrap_content"
	                        android:layout_width="wrap_content"
	                        android:text="@string/text_bai"
	                        style="@style/text_card_type_footer"
                        />
                       <TextView android:layout_height="wrap_content"
	                        android:layout_width="wrap_content"
	                        android:text="@string/text_share"
	                        android:textSize="12sp"
	                        android:textColor="@color/color_rankings_describe"
	                        android:layout_marginLeft="13dp"
                        /> 
                    </LinearLayout>
                    <RelativeLayout android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:paddingTop="3dp">
                        <ImageView
		                    android:id="@+id/iv_icon"
		                    android:layout_width="25dp"
		                    android:layout_height="25dp"
		                    android:layout_alignParentLeft="true"
		                    android:layout_marginRight="13dp"
		                    android:src="@drawable/icon_msg_three" />
                        <LinearLayout android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:layout_toRightOf="@id/iv_icon"
                            android:orientation="vertical">
                            
	                        <TextView android:layout_height="wrap_content"
	                            android:layout_width="wrap_content"
	                            android:textSize="14sp"
	                            android:textColor="@color/color_key_process"
	                            android:id="@+id/tv_sub"
	                            android:text="@string/text_subway"/>
	                        <TextView android:layout_height="wrap_content"
	                            android:layout_width="wrap_content"
	                            android:textSize="12sp"
	                            android:textColor="@color/color_rankings_describe"
	                            android:id="@+id/tv_sub"
	                            android:text="@string/text_buy"/>
                        </LinearLayout>
                    </RelativeLayout>
                    <TextView android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:paddingTop="3dp"
                        android:textSize="12sp"
	                    android:textColor="@color/color_rankings_describe"
                        android:text="@string/text_30_minite"/>
                    
                    
                </LinearLayout>
            </RelativeLayout>
            <View android:layout_height="0.6dp"
                android:layout_width="match_parent"
                android:background="@color/list_divider_color"
                android:layout_marginBottom="15dp"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>